Fix landing page links

--- a/src/MOnGoL.Host.Combi/wwwroot/default.html
+++ b/src/MOnGoL.Host.Combi/wwwroot/default.html
@@ -30,9 +30,9 @@
         </div>
         <div class="row justify-content-center mt-6">
             <div class="btn-group" role="group" aria-label="Choose your poison">
-                <a href="/wasm/home" class="btn btn-light btn-lg btn-scale" role="button">WebAssembly</a>
+                <a href="/wasm/" class="btn btn-light btn-lg btn-scale" role="button">WebAssembly</a>
                 <a href="/iframe.html" class="btn btn-dark btn-lg btn-scale" role="button">&lt; Side by Side &gt;</a>
-                <a href="/serverside/home" class="btn btn-light btn-lg btn-scale" role="button">Server-side</a>
+                <a href="/serverside/" class="btn btn-light btn-lg btn-scale" role="button">Server-side</a>
             </div>
         </div>
         <div class="row">
@@ -124,9 +124,9 @@
         </div>
         <div class="row justify-content-center">
             <div class="btn-group" role="group" aria-label="Choose your poison">
-                <a href="/wasm/home" class="btn btn-light btn-lg btn-scale" role="button">WebAssembly</a>
+                <a href="/wasm/" class="btn btn-light btn-lg btn-scale" role="button">WebAssembly</a>
                 <a href="/iframe.html" class="btn btn-dark btn-lg btn-scale" role="button">&lt; Side by Side &gt;</a>
-                <a href="/serverside/home" class="btn btn-light btn-lg btn-scale" role="button">Server-side</a>
+                <a href="/serverside/" class="btn btn-light btn-lg btn-scale" role="button">Server-side</a>
             </div>
         </div>
     </div>
