--- a/src/MOnGoL.Host.Combi/wwwroot/iframe.html
+++ b/src/MOnGoL.Host.Combi/wwwroot/iframe.html
@@ -30,9 +30,9 @@
         </div>
         <div class="row justify-content-center mt-6">
             <div class="btn-group" role="group" aria-label="Choose your poison">
-                <a href="/wasm/home" class="btn btn-light btn-lg btn-scale" role="button">WebAssembly</a>
+                <a href="/wasm/" class="btn btn-light btn-lg btn-scale" role="button">WebAssembly</a>
                 <a href="/" class="btn btn-dark btn-lg btn-scale" role="button">Home</a>
-                <a href="/serverside/home" class="btn btn-light btn-lg btn-scale" role="button">Server-side</a>
+                <a href="/serverside/" class="btn btn-light btn-lg btn-scale" role="button">Server-side</a>
             </div>
         </div>
         <div class="row">
@@ -42,13 +42,13 @@
             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 px-6 py-6">
                 <h2>WebAssembly</h2>
                 <div class="embed-responsive embed-responsive-1by1">
-                    <iframe class="embed-responsive-item" src="/wasm/home"></iframe>
+                    <iframe class="embed-responsive-item" src="/wasm/"></iframe>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 px-6 py-6 text-center">
                 <h2>Server-side</h2>
                 <div class="embed-responsive embed-responsive-1by1">
-                    <iframe class="embed-responsive-item" src="/serverside/home"></iframe>
+                    <iframe class="embed-responsive-item" src="/serverside/"></iframe>
                 </div>
             </div>
         </div>
