--- a/src/MOnGoL.Host.Combi/wwwroot/iframe.html
+++ b/src/MOnGoL.Host.Combi/wwwroot/iframe.html
@@ -14,6 +14,11 @@
             background-image: url(https://dotnet.microsoft.com/static/images/redesign/home-hero-bg.svg);
             background-image: url(https://dotnet.microsoft.com/static/images/redesign/home-hero-bg.svg),linear-gradient(180deg,#7014e8 30.12%,#0e5ecf 192.47%);
         }
+        .embed-responsive-3by4::before
+            {
+                padding-top: 133%;
+            }
+
     </style>
 </head>
 
@@ -41,13 +46,13 @@
         <div class="row mt-6 text-center">
             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 px-6 py-6">
                 <h2>WebAssembly</h2>
-                <div class="embed-responsive embed-responsive-1by1">
+                <div class="embed-responsive embed-responsive-3by4">
                     <iframe class="embed-responsive-item" src="/wasm/"></iframe>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 px-6 py-6 text-center">
                 <h2>Server-side</h2>
-                <div class="embed-responsive embed-responsive-1by1">
+                <div class="embed-responsive embed-responsive-3by4">
                     <iframe class="embed-responsive-item" src="/serverside/"></iframe>
                 </div>
             </div>
